deploy/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
spec:
  type: ClusterIP
  selector:
    app: portal-frontend
  ports:
    - port: 80
      targetPort: 80
